# MS_mv_modelling

./: .gitignore  README.md  pyproject.toml  requirements.txt  setup.py
docs/: api.rst  conf.py  index.rst  installation.rst  references.bib  references.rst  requirements.txt
docs/_static/css/: custom.css
docs/examples/: derks2024.ipynb  example1.ipynb  example2.ipynb  index.rst
docs/tutorials/: derks2024.ipynb  index.rst
notebooks/: DataLoading.ipynb  PXD024043.ipynb  PXD024043_precursor.ipynb  PXD024043_protein.ipynb  PXD038699.ipynb  PXD038699_5_shapes.ipynb  brunner2022_precursor.ipynb  brunner2022_protein.ipynb  data_loading.py  manns_lab_data.ipynb  manns_lab_data_integration.ipynb  manns_lab_dual_data.ipynb  manns_lab_support.py  playground.ipynb  rosenberger2023_5shapes.ipynb  simulation.ipynb  simulation__shz.ipynb  simulation__shz_071123.ipynb
notebooks/brunner2022/: precursor.ipynb  protein.ipynb  protein__ms_0.ipynb  protein__ms_1.ipynb  protein__ms_heuristic2.ipynb  protein__ms_smart.ipynb  protein_baseline.ipynb  protein_baseline_filtered.ipynb  protein_conjunction.ipynb  protein_hybrid.ipynb  protein_selection.ipynb  protein_selection_heuristic.ipynb
notebooks/brunner2022/precursor/: 1_protvi.ipynb  1_protvi_selection.ipynb
notebooks/brunner2022/protein/: 0_data_preparation.ipynb  1_data_exploration.ipynb  2_protvi.ipynb  2_protvi_baseline.ipynb  2_protvi_mcar_mnar.ipynb  3_benchmark_models.ipynb  3_protvi_selection.ipynb  3_protvi_selection_heuristic.ipynb  4_protvi_conjunction.ipynb  4_results_overview.ipynb  5_protein_hybrid.ipynb
notebooks/leduc2022_pSCoPE/: 1_data_exploration.ipynb  2_protvi.ipynb  3_pSCoPE_plexdia_integration.ipynb
notebooks/manns_inhouse/: 0_data_preparation.ipynb  1_data_exploration.ipynb  1_data_integration.ipynb  2_data_exploration.ipynb  2_protvi.ipynb  2_protvi_mcar_mnar.ipynb  3_protvi_baseline.ipynb  3_protvi_baseline_iwae.ipynb  4_protvi_selection.ipynb  4_protvi_selection_heuristic.ipynb  4_results_overview.ipynb  5_DE.ipynb  5_protvi_conjunction.ipynb  6_protvi_hybrid.ipynb  8_results_overview.ipynb  data_support.py
notebooks/manns_lab_data/: 2_data_exploration.ipynb  3_protvi_baseline.ipynb  4_protvi_selection.ipynb  4_protvi_selection__heuristic.ipynb  4_protvi_selection_heuristic.ipynb  5_protvi_conjunction.ipynb  6_protvi_hybrid.ipynb  6_protvi_hybrid_heuristic.ipynb  7_results_overview.ipynb  data_support.py
notebooks/ospp/: data_loading.ipynb
notebooks/poulos2020/: 0_data_preparation.ipynb  1_RUVIII_C.ipynb  1_data_exploration.ipynb  2_protvi.ipynb  3_RUVIII_C.ipynb  4_RUVIII_C.ipynb
notebooks/poulos2020/peptide_subset/: 1_protvi_selection.ipynb
notebooks/poulos2020/peptides_all/: 1_data_exploration.ipynb  2_protvi_baseline.ipynb  3_protvi_selection.ipynb  3_protvi_selection_heuristic.ipynb
notebooks/poulos2022/: peptides.ipynb
notebooks/poulos2022/peptides_all/: 1_data_exploration.ipynb  4_protvi_hybrid.ipynb  peptides__ms_0.ipynb  peptides__ms_1.ipynb  peptides__ms_heuristic.ipynb  peptides_hybrid.ipynb  peptides_selection.ipynb  peptides_selection_heuristic.ipynb
notebooks/rosenberger2023/: 5shapes.ipynb  single_cell__ms_0.ipynb  single_cell__ms_1.ipynb  single_cell__ms_heuristic2.ipynb  single_cell__ms_smart.ipynb  single_cell_baseline.ipynb  single_cell_hybrid.ipynb  single_cell_selection_heuristic2.ipynb
notebooks/rosenberger2023/5shape/: 1_protvi_selection.ipynb
notebooks/rosenberger2023/single_cell/: 1_data_exploration.ipynb  2_protvi.ipynb  2_protvi_baseline.ipynb  3_protvi_selection.ipynb  3_protvi_selection_heuristic2.ipynb  4_protvi_hybrid.ipynb
notebooks/schoof2021/: batch_intergration.ipynb  protvi.ipynb
notebooks/schoof_inhouse/: 1_data_exploration.ipynb  2_protvi.ipynb  2_protvi_baseline.ipynb  3_protvi_selection.ipynb  3_protvi_selection_heuristic.ipynb  4_protvi_hybrid.ipynb  protein_baseline.ipynb  protein_hybrid.ipynb  protein_selection.ipynb  protein_selection_heuristic.ipynb
notebooks/simulations/: simulation.ipynb  simulation__cells_1k_proteins_1k_epochs_3k.ipynb  simulation__cells_1k_proteins_1k_epochs_5k.ipynb  simulation__cells_1k_proteins_5k_epochs_5k.ipynb  simulation__cells_2k_proteins_1k_epochs_3k.ipynb
notebooks/simulations/elbo/: simulation__cells_1k_proteins_1k_epochs_1_group.ipynb  simulation__cells_1k_proteins_1k_epochs_3k.ipynb
notebooks/simulations/iwae/: simulation__cells_1k_proteins_1k_epochs_1_group.ipynb  simulation__cells_1k_proteins_1k_epochs_3k.ipynb
notebooks/wang2024_ospp/: precursors_data_loading.ipynb  proteins_data_loading.ipynb  protvi.ipynb
scp/: benchmark_models.py  metrics.py  models.py  plots.py  simulations.py  utils.py
src/protvi/: __init__.py  benchmark_models.py  metrics.py  models.py  plots.py  simulations.py  utils.py
src/protvi/model/: __init__.py  _constants.py  _protvae.py  _protvi.py
